[package]
name = "compile_lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1.4"
lambda_runtime = "0.9.1"
serde = "1.0.196"
serde_json = "1.0.113"
tokio = "1.35.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
common = { path = "../common" }
reqwest = "0.11.24"
tempfile = "3.10.0"
zip = "0.6.6"
zkcir = { git = "https://github.com/chriscerie/zkcir" }
