[package]
name = "core_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
aws-config = "1.1.2"
aws-sdk-dynamodb = "1.10.0"
aws-sdk-lambda = "1.12.0"
aws-sdk-s3 = "1.12.0"
axum = { version = "0.7.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.2", features = ["multipart", "typed-header"] }
chrono = "0.4.31"
if_chain = "1.0.2"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
serde = "1.0.195"
serde_json = "1.0.111"
tempfile = "3.9.0"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.9"
tower-http = { version = "0.5.1", features = ["fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ubyte = "0.10.4"
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
uuid = { version = "1.6.1", features = ["v4", "v7"] }
walkdir = "2.4.0"
zip = "0.6.6"
common = { path = "../common" }
